fix: keep Java 17 builds with reflective virtual threads
Replace direct Thread.ofVirtual / newThreadPerTaskExecutor calls with a
MethodHandle helper so the tree compiles on JDK 17 and falls back to
platform pools. Refresh docs and status/gap analysis for the Java 17
toolchain. Tests: 326 green on JDK 17.